--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.21.2",
     "fastify": "^5.2.1",
     "fastify-static": "^4.6.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7"
