--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "projeto-padilha-advogados",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "aos": "^2.3.4",
     "body-parser": "^1.20.3",
