atualizado sem a function de formulario de email

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "aos": "^2.3.4",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
